--- a/src/assets/css/theme1.css
+++ b/src/assets/css/theme1.css
@@ -121,6 +121,7 @@
 
 /* favorite */
 :root { 
+  --favorite-favoriteEmpty-textcolor: var(--text);
   --favorite-favoriteRoot-bgcolor: var(--bg);
   --favorite-eachImg-hover-bgcolor: transparent;
 }
