--- a/src/assets/css/theme2.css
+++ b/src/assets/css/theme2.css
@@ -200,6 +200,7 @@
   --drawer-checker-svgcolor: var(--text);
   --drawer-checker-textcolor: var(--text);
   --drawer-dialogContent-textcolor: var(--text);
+  --drawer-setting-selected-border: var(--color-8);
 }
 
 /* namecard */
